--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "lodash": "^4.17.11",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
-    "react-scripts": "2.1.8",
+    "react-scripts": "^3.0.0",
     "styled-components": "^4.2.0"
   },
   "scripts": {
@@ -25,6 +25,8 @@
     "not op_mini all"
   ],
   "devDependencies": {
+    "react-redux": "^7.0.3",
+    "redux": "^4.0.1",
     "standard": "^12.0.1"
   }
 }
