--- a/package.json
+++ b/package.json
@@ -3,10 +3,10 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "lodash": "^4.17.11",
+    "lodash": "^4.17.15",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
-    "react-scripts": "2.1.8",
+    "react-scripts": "^3.0.1",
     "styled-components": "^4.2.0"
   },
   "scripts": {
@@ -25,6 +25,7 @@
     "not op_mini all"
   ],
   "devDependencies": {
+    "jest": "^24.8.0",
     "standard": "^12.0.1"
   }
 }
