--- a/package.json
+++ b/package.json
@@ -3,10 +3,10 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "lodash": "^4.17.11",
+    "lodash": "^4.17.15",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
-    "react-scripts": "^3.0.0",
+    "react-scripts": "^3.0.1",
     "styled-components": "^4.2.0"
   },
   "scripts": {
@@ -27,6 +27,7 @@
   "devDependencies": {
     "react-redux": "^7.0.3",
     "redux": "^4.0.1",
-    "standard": "^12.0.1"
+    "standard": "^12.0.1",
+    "jest": "^24.8.0"
   }
 }
